Removed parallax section at beginning of the website and replacing it with the intro text. Modified formatting of about text in the mobile view as well as other formatting to make sure content doesn't fill too much of the screen.

--- a/styles.scss
+++ b/styles.scss
@@ -70,38 +70,38 @@ body {
   top: 0; right: 0; left: 0; bottom: 0;
   display: grid;
   grid-template-columns: minmax(1rem, 1fr) [grid-s] repeat(12, minmax(2rem, 5rem)) [grid-e] minmax(1rem, 1fr);
-  grid-template-rows: 130vh 100vh 100vh repeat(4, auto);
+  grid-template-rows: 100vh 100vh repeat(4, auto);
   grid-column-gap: 1.25rem;
   justify-content: center;
 
   .intro {
     grid-column: 1 / -1;
-    grid-row: 2 / span 1;
+    grid-row: 1 / span 1;
     justify-self: center;
   }
   .nav {
     grid-column: grid-s / span 2;
-    grid-row: 4 / span 1;
+    grid-row: 3 / span 1;
   }
   .project-titles {
     grid-column: grid-s / grid-e;
-    grid-row: 5 / span 1;
+    grid-row: 3 / span 1;
   }
   .projects {
-    grid-column: 2 / 3;
-    grid-row: 5 / span 1;
+    grid-column: grid-s / grid-e;
+    grid-row: 3 / span 1;
   }
   .about {
-    grid-column: 4 / span 7;
-    grid-row: 6 / span 1;
+    grid-column: 4 / -5;
+    grid-row: 4 / span 1;
   }
   .footer__background {
     grid-column: 1 / -1;
-    grid-row: 7 / span 1;
+    grid-row: 5 / span 1;
   }
   .footer {
     grid-column: grid-s / grid-e;
-    grid-row: 7 / span 1;
+    grid-row: 5 / span 1;
   }
 }
 
@@ -110,60 +110,18 @@ body {
   left: 0;
   right: 0;
   margin-left: auto;
-  margin-right: 2rem;
+  margin-right: auto;
   width: 3rem;
   bottom: 3rem;
-  z-index: 12;
+  z-index: 5;
   @include bounce;
-}
-
-.parallax {
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  margin: auto;
-  width: 100vw;
-  height: 100vh;
-  z-index: -10;
-}
-.parallax__image {
-  position: inherit;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-
-  @include transform-origin(center, center);
-  @include transform(translate3d(0, 0, 0));
-  @include transition-duration(1ms);
-}
-$circle-width: 14rem;
-.parallax__element--slice1 { width: $circle-width * 1.3; }
-.parallax__element--slice2 { width: $circle-width * 0.9; }
-.parallax__element--slice3 { width: $circle-width * 1.7; }
-.parallax__element--slice4 { width: $circle-width * 1.4; }
-.parallax__element--slice5 { width: $circle-width * 2.3; }
-.parallax__element--slice6 { width: $circle-width * 0.6; }
-.parallax__element--slice7 { width: $circle-width * 2.6; }
-.parallax__element--slice8 { width: $circle-width * 2.7; }
-.parallax__element--slice9 { width: $circle-width * 2.3; }
-.parallax__element--slice10 { width: $circle-width * 0.4; }
-.parallax__element--slice11 { width: $circle-width * 1.0; }
-.parallax__element--slice12 { width: $circle-width * 1.0; }
-.parallax__element--slice13 { width: $circle-width * 1.7; }
-.parallax__element--slice14 { width: $circle-width; }
-.parallax__element--slice15 { width: $circle-width * 1.9; }
-.parallax__element--slice16 { width: $circle-width * 1; }
-.parallax__element--circular-text-small { width: $circle-width * 3.0; }
-.parallax__element--circular-text-large {
-  display: none;
-  width: $circle-width * 5.2;
 }
 
 .loading {
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
   overflow: hidden;
+  z-index: 10;
 }
 .loading__element {
   position: absolute;
@@ -174,14 +132,14 @@ $circle-width: 14rem;
   margin: auto;
 }
 .loading__logo {
-  width: $circle-width * 0.4;
+  width: 14rem * 0.4;
 }
 .loading__bg {
   background-color: $blue;
   border-radius: 0;
 }
 .loading__circle {
-  width: $circle-width * 0.9;
+  width: 14rem * 0.9;
 }
 @media (orientation:landscape) {
   .loading__bg {
@@ -308,6 +266,41 @@ $circle-width: 14rem;
   opacity: 0;
 }
 
+.projects {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 30rem 0 10rem -7rem;
+
+  .projects__element--group {
+    margin: 8rem 0;
+    perspective: 400px;
+  }
+  .projects__element--image {
+    cursor: pointer;
+    @include transition(all .1s linear);
+  }
+  $changeImageSize: 1.3;
+  #construct {
+    width: 37rem * $changeImageSize;
+  }
+  #rps {
+    width: 52rem * $changeImageSize;
+  }
+  #ecommerce {
+    width: 43rem * $changeImageSize;
+  }
+  #exodus_img {
+    width: 39rem * $changeImageSize;
+  }
+  #logos {
+    width: 33rem * $changeImageSize;
+  }
+}
+
 .project-view {
   display: none;
   grid-template-columns: minmax(1rem, 1fr) [grid-s] repeat(12, minmax(2rem, 5rem)) [grid-e] minmax(1rem, 1fr);
@@ -315,6 +308,7 @@ $circle-width: 14rem;
   position: fixed;
   height: 100vh;
   width: 100vw;
+  background-color: white;
   overflow-y: auto;
   z-index: 10;
 
@@ -374,40 +368,7 @@ $circle-width: 14rem;
   }
 }
 
-.projects {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  margin: 0 0 10rem -7rem;
 
-  .projects__element--group {
-    margin: 8rem 0;
-    perspective: 400px;
-  }
-  .projects__element--image {
-    cursor: pointer;
-    @include transition(all .1s linear);
-  }
-  $changeImageSize: 1.3;
-  #construct {
-     width: 37rem * $changeImageSize;
-  }
-  #rps {
-     width: 52rem * $changeImageSize;
-  }
-  #ecommerce {
-     width: 43rem * $changeImageSize;
-  }
-  #exodus_img {
-     width: 39rem * $changeImageSize;
-  }
-  #logos {
-     width: 33rem * $changeImageSize;
-  }
-}
 
 .footer__background {
   background-color: $off-black;
@@ -453,52 +414,34 @@ $circle-width: 14rem;
   }
 }
 
-@media (max-width: 1100px) {
-  .parallax__element {
-    display: none;
-  }
-  .parallax__element--show-mobile {
-    display: inline-block;
-  }
-  .parallax__element--circular-text-large {
-    display: inline-block;
-    width: 110%;
-    left: -5%;
-  }
-  .parallax__element--circular-text-small {
-    width: 60%;
-  }
-}
-
-@media (max-width: 800px) {
-
+@media (max-width: 768px) {
   .grid-container {
-    grid-template-columns: repeat(2, 1fr) auto;
+    grid-template-columns: repeat(3, 1fr);
     margin: 0 1rem;
 
     .nav {
-      grid-column: 3 / -1;
-      grid-row: 4 / span 1;
-    }
-    .about {
-      grid-column: 1 / -2;
-      grid-row: 6 / span 1;
+      grid-column: 1 / -1;
+      grid-row: 3 / span 1;
     }
     .project-titles {
       grid-column: 1 / -1;
-      grid-row: 5 / span 1;
+      grid-row: 3 / span 1;
     }
     .projects {
       grid-column: 1 / -1;
-      grid-row: 5 / span 1;
+      grid-row: 3 / span 1;
+    }
+    .about {
+      grid-column: 1 / -1;
+      grid-row: 4 / span 1;
     }
     .footer__background {
       grid-column: 1 / -1;
-      grid-row: 7 / span 1;
+      grid-row: 5 / span 1;
     }
     .footer {
       grid-column: 1 / -1;
-      grid-row: 7 / span 1;
+      grid-row: 5 / span 1;
     }
   }
 
@@ -510,17 +453,6 @@ $circle-width: 14rem;
     width: 100%;
     .intro__element {
       white-space: normal;
-    }
-  }
-
-  .nav {
-    .nav__element--name {
-      justify-content: right;
-    }
-    .logos {
-      .logo__element {
-        align-self: flex-end;
-      }
     }
   }
 
@@ -555,6 +487,7 @@ $circle-width: 14rem;
   .project-view {
     grid-template-columns: calc(100vw - 2rem);
     margin: 0 1rem;
+    left: -1rem;
 
     .project-view__drag-text {
       display: none;
@@ -571,33 +504,39 @@ $circle-width: 14rem;
 
   .footer__background {
     position: relative;
-    width: 120%;
+    width: 120vw;
     height: 140%;
-    left: -10%;
+    left: -1rem;
     z-index: -1;
   }
   .footer {
     flex-direction: column;
   }
 }
-
-@media (max-width: 550px) {
+@media (max-width: 768px) {
   .nav {
     .nav__element--name {
-      display: none;
+      margin: 0;
     }
     .links {
-      margin-top: 2rem;
-
-      .links__element--about-img {
-        top: 1rem;
-      }
+      display: none;
     }
   }
+}
 
+@media (max-width: 425px) {
   .about {
     .about__element {
       font-size: 1.5rem;
     }
+  }
+  .footer {
+    font-size: 0.85rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .nav {
+    display: none;
   }
 }
